--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <footer class="footer fixed-bottom mt-auto py-3 bg-light text-center" th:fragment="footer">
+    <footer class="footer  mt-auto py-3 bg-light text-center" th:fragment="footer">
         <p>Shopme Control Panel - Copyright &copy; Shopme</p>
     </footer>
 </body>
