--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace = "fragments :: page_head('Home - Shopme Admin')"></head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid vh-100">
         <!-- navigation -->
 
         <div th:replace="navigation :: menu"></div>
@@ -18,9 +18,10 @@
         </div>
 
 
-<!--        footer-->
-        <div th:replace = "fragments :: footer"></div>
+
     </div>
+    <!--        footer-->
+    <div th:replace = "fragments :: footer"></div>
     <script type="text/javascript">
         $(document).ready(function () {
             $("#logoutLink").on("click" , function (e) {
