--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid vh-100">
         <!-- navigation -->
 
         <div th:replace="navigation :: menu"></div>
@@ -103,8 +103,10 @@
             </div>
         </div>
 
-        <div th:replace="fragments :: footer"></div>
     </div>
+<!--    footer-->
+    <div th:replace="fragments :: footer"></div>
+
 <script>
     $("#cancelButton").on("click", function (){
         window.location = "[[@{/users}]]"
