--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head th:replace="fragments :: page_head('Users - Shopme Admin')"></head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid vh-100">
         <!-- navigation -->
 
         <div th:replace="navigation :: menu"></div>
@@ -26,7 +26,7 @@
             [[${message}]]
         </div>
 
-        <div>
+        <div class="full-details">
             <table class="table table-responsive-xl table-bordered table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
@@ -107,12 +107,39 @@
             </table>
         </div>
 
+        <div class="less-details">
+            <div th:each="user : ${listUsers}" class="row m-1">
+                <div class="col-4">
+                    <img th:if = "${user.photos == null}" th:src = "@{/images/default-user.png}" style="width: 100px"/>
+                    <img th:if="${user.photos != null}" th:src="@{${user.getPhotosImagePath()}}" style="width: 100px"/>
+                </div>
+
+                <div class="col-8">
+                    <div>[[${user.fullName}]]</div>
+                    <div>[[${user.roles}]]</div>
+                    <div class="mt-1">
+                        <a th:if="${user.enabled == true }" class="fa-sharp fa-solid fa-circle-check fa-2x icon-green m-1 "
+                           th:href="@{'/users/' + ${user.id} + '/enabled/false'}" title="Disable this user"></a>
+                        <a th:if="${user.enabled == false }" class="fa-sharp fa-solid fa-circle fa-2x icon-gray m-1"
+                           th:href="@{'/users/' + ${user.id} + '/enabled/true'}" title="Enable this user"></a>
+                        <a class="fa-solid fa-pen-to-square fa-2x icon-green m-1" th:href="@{'/users/edit/' + ${user.id}}" title="Edit this user"></a>
+                        <a class="fa-sharp fa-solid fa-trash fa-2x icon-gray link-delete my-1"
+                           th:userId = "${user.id}"
+                           th:href="@{'/users/delete/' + ${user.id}}"
+                           title="Delete this user"></a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
 <!--        pagination-->
         <div class="text-center m-1">
             <span>Showing user number # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
         </div>
         <nav>
-            <ul class="pagination justify-content-center">
+            <ul class="pagination justify-content-center flex-wrap">
                 <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/1?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">First</a></li>
                 <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Previous</a></li>
 
@@ -162,10 +189,12 @@
             modal.show();
         })
 
-        setTimeout(() =>{
-            const el = $("#messageBlock").get(0)
-            el.style.display = "none";
-        },3000);
+        if($("#messageBlock")){
+            setTimeout(() =>{
+                const el = $("#messageBlock");
+                el.css("display", "none");
+            },3000);
+        }
     })
 
     function clearFilter(){
