--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace = "fragments :: page_head('Error - Shopme Admin')"></head>
-<body>
-    <div class="container-fluid vh-100" >
+<body class="d-flex flex-column h-100">
+    <div class="container-fluid" >
       <!-- navigation -->
 
       <div th:replace="navigation :: menu"></div>
