--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
@@ -6,9 +6,10 @@
     <title>Login - Shopme Admin Control Panel</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}">
     <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 
 </head>
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column h-100">
     <div class="container-fluid flex-shrink-0 text-center ">
         <!-- navigation -->
 
