--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -10,13 +10,13 @@
     <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.bundle.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
     <link rel="stylesheet" th:href="@{/fontawesome/all.css}">
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
 
 </head>
 <body>
-    <footer class="footer  mt-auto py-3 bg-light text-center" th:fragment="footer">
-        <p>Shopme Control Panel - Copyright &copy; Shopme</p>
+    <footer class="footer mt-auto py-3 bg-dark text-center" th:fragment="footer">
+        <p class="text-white">Shopme Control Panel - Copyright &copy; Shopme</p>
     </footer>
 </body>
 </html>
