--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace = "fragments :: page_head('Home - Shopme Admin')"></head>
-<body>
-    <div class="container-fluid vh-100">
-        <!-- navigation -->
+<body class="d-flex flex-column h-100">
 
-        <div th:replace="navigation :: menu"></div>
+<!--navigation-->
+    <div th:replace="navigation :: menu"></div>
 
-        <div>
-            <h1>Shopme Admin control Panel</h1>
+    <div class="container-fluid">
             <div>
-                <span>
-                    Welcome <a th:href="@{/account}" sec:authentication="principal.fullName"></a>
-                    <span  sec:authentication="principal.authorities"></span>
-                </span>
+                <h1>Shopme Admin control Panel</h1>
+                <div>
+                    <span>
+                        Welcome <a th:href="@{/account}" sec:authentication="principal.fullName"></a>
+                        <span  sec:authentication="principal.authorities"></span>
+                    </span>
+                </div>
             </div>
+
+
+
         </div>
-
-
-
-    </div>
-    <!--        footer-->
-    <div th:replace = "fragments :: footer"></div>
+        <!--        footer-->
+        <div th:replace = "fragments :: footer"></div>
     <script type="text/javascript">
         $(document).ready(function () {
             $("#logoutLink").on("click" , function (e) {
