--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
-<body>
-    <div class="container-fluid vh-100">
+<body class="d-flex flex-column h-100">
         <!-- navigation -->
-
         <div th:replace="navigation :: menu"></div>
+        <div class="container-fluid">
 
-        <h2>Manage Users | [[${pageTitle}]]</h2>
+            <h2>Manage Users | [[${pageTitle}]]</h2>
 
-        <!-- Create Form -->
-        <form  th:action = "@{/users/save}" method="post" id="formSubmit"
-              style="max-width: 700px; margin: 0 auto" th:object="${user}"
-               enctype="multipart/form-data"
-              onsubmit= "return checkEmailUnique(this)">
-            <input type="hidden" name="id" id="userId"  th:field="${user.id}">
+            <!-- Create Form -->
+            <form  th:action = "@{/users/save}" method="post" id="formSubmit" class="my-4 mx-auto"
+                   style="max-width: 600px" th:object="${user}"
+                   enctype="multipart/form-data"
+                   onsubmit= "return checkEmailUnique(this)">
+                <input type="hidden" name="id" id="userId"  th:field="${user.id}">
                 <div class="border border-secondary rounded p-3">
                     <div class="row input-group p-3">
                         <label class="col-sm-4 form-label" for="emailInput">Email:</label>
@@ -84,28 +83,28 @@
                     </div>
                 </div>
 
-        </form>
-<!--        modal dialog thong bao loi-->
-        <div class="modal fade text-center" id="modalDialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="modalTitle">Warning</h4>
-                        <button type="button" class="btn-close"  data-bs-dismiss="modal" ></button>
-                    </div>
-                    <div class="modal-body">
-                        <p id="modalBody"></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </form>
+            <!--        modal dialog thong bao loi-->
+            <div class="modal fade text-center" id="modalDialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title" id="modalTitle">Warning</h4>
+                            <button type="button" class="btn-close"  data-bs-dismiss="modal" ></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="modalBody"></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!--    footer-->
+        <div th:replace="fragments :: footer"></div>
 
-    </div>
-<!--    footer-->
-    <div th:replace="fragments :: footer"></div>
 
 <script>
     $("#cancelButton").on("click", function (){
