--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
@@ -55,11 +55,10 @@
 				<div class="col-sm-8">
 					<input type="hidden" th:field="*{image}" />
 					<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
-						class="mb-2" />
-
-					<div class="mt-2">
+						   class="mb-2 form-control" />
+					<div class="my-3 text-center">
 						<img id="thumbnail" alt="Image preview" th:src="@{/images/image-thumbnail.png}"
-							class="img-fluid" />
+							class="img-fluid img-thumbnail" />
 					</div>
 				</div>
 			</div>
