--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
@@ -71,7 +71,7 @@
                         <label class="col-sm-4 form-label" >Photos:</label>
                         <div class="col-sm-8">
                             <input type="hidden" th:field="${user.photos}">
-                            <input type="file"  id="fileImage" name="image" accept="image/png ,image/jpeg" class="mb-2">
+                            <input type="file" id="fileImage" name="image" accept="image/png ,image/jpeg" class="form-control">
                             <img th:src = "@{${user.getPhotosImagePath()}}" alt="Photo preview" id="thumbnail" class="img-fluid">
                         </div>
                     </div>
