--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
@@ -14,62 +14,63 @@
 			enctype="multipart/form-data"
 			th:object="${category}">
 			<input type="hidden" th:field="*{id}" />
-		<div class="border border-secondary rounded p-3">
-			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Category Name:</label>
-				<div class="col-sm-8">
-					<input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="128"  />
-				</div>
-			</div>
-
-			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Alias:</label>
-				<div class="col-sm-8">
-					<input type="text" class="form-control" th:field="*{alias}" required minlength="3" maxlength="64"  />
-				</div>
-			</div>
-
-			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Parent Category:</label>
-				<div class="col-sm-8">
-					<select class="form-control" th:field="*{parent}">
-						<option value="0">[No Parent]</option>
-						<th:block th:each="cat : ${listCategories}">
-						<option th:value="${cat.id}">[[${cat.name}]]</option>
-						</th:block>
-
-					</select>
-				</div>
-			</div>
-
-
-			<div class="input-group row p-3" >
-				<label class="col-sm-4 form-check-label" for="checkEnable">Enabled:</label>
-				<div class="col-sm-8 align-items-center">
-					<input type="checkbox" class="form-check-input" th:field="*{enabled}" id="checkEnable" />
-				</div>
-			</div>
-
-			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Image:</label>
-				<div class="col-sm-8">
-					<input type="hidden" th:field="*{image}" />
-					<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
-						   class="mb-2 form-control" />
-					<div class="my-3 text-center">
-						<img id="thumbnail" alt="Image preview" th:src="@{/images/image-thumbnail.png}"
-							class="img-fluid img-thumbnail" />
+			<div class="border border-secondary rounded p-3">
+				<div class="input-group row p-3">
+					<label class="col-sm-4 col-form-label">Category Name:</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="128"  />
 					</div>
 				</div>
+
+				<div class="input-group row p-3">
+					<label class="col-sm-4 col-form-label">Alias:</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" th:field="*{alias}" required minlength="3" maxlength="64"  />
+					</div>
+				</div>
+
+				<div class="input-group row p-3">
+					<label class="col-sm-4 col-form-label">Parent Category:</label>
+					<div class="col-sm-8">
+						<select class="form-control" th:field="*{parent}">
+							<option value="0">[No Parent]</option>
+							<th:block th:each="cat : ${listCategories}">
+							<option th:value="${cat.id}">[[${cat.name}]]</option>
+							</th:block>
+
+						</select>
+					</div>
+				</div>
+
+
+				<div class="input-group row p-3" >
+					<label class="col-sm-4 form-check-label" for="checkEnable">Enabled:</label>
+					<div class="col-sm-8 align-items-center">
+						<input type="checkbox" class="form-check-input" th:field="*{enabled}" id="checkEnable" />
+					</div>
+				</div>
+
+				<div class="input-group row p-3">
+					<label class="col-sm-4 col-form-label">Image:</label>
+					<div class="col-sm-8">
+						<input type="hidden" th:field="*{image}" />
+						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg"
+							   th:required="${category.id == null}"
+							   class="mb-2 form-control" />
+						<div class="my-3 text-center">
+							<img id="thumbnail" alt="Image preview" th:src="@{${category.imagePath}}"
+								class="img-fluid img-thumbnail" />
+						</div>
+					</div>
+				</div>
+
+
+
+				<div class="text-center">
+					<input type="submit" value="Save" class="btn btn-primary m-3" />
+					<input type="button" value="Cancel" class="btn btn-secondary" id="cancelButton" />
+				</div>
 			</div>
-
-
-
-			<div class="text-center">
-				<input type="submit" value="Save" class="btn btn-primary m-3" />
-				<input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
-			</div>
-		</div>
 		</form>
 
 		<div class="modal fade text-center" id="modalDialog">
@@ -98,5 +99,6 @@
 
 </script>
 <script th:src="@{/js/main.js}"></script>
+<script th:src="@{/js/common-form.js}"></script>
 </body>
 </html>
