--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/categories.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/categories.html
@@ -55,9 +55,9 @@
                         <td>[[${cat.alias}]]</td>
                         <td class="text-center">
                             <a th:if="${cat.enabled == true }" class="fa-sharp fa-solid fa-circle-check fa-2x icon-green "
-                               th:href="@{'/categories/' + ${cat.id} + '/enabled/false'}" title="Disable this user"></a>
+                               th:href="@{'/categories/' + ${cat.id} + '/enabled/false'}" title="Disable this category"></a>
                             <a th:if="${cat.enabled == false }" class="fa-sharp fa-solid fa-circle fa-2x icon-gray"
-                               th:href="@{'/categories/' + ${cat.id} + '/enabled/true'}" title="Enable this user"></a>
+                               th:href="@{'/categories/' + ${cat.id} + '/enabled/true'}" title="Enable this category"></a>
 
                         </td>
                         <td class="text-center">
